--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,10 @@
 body {
-  margin: 0;
+  box-sizing: border-box;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
+  margin: 0;
+  padding: 0;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
@@ -10,4 +12,19 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+.sessao-cards {
+  align-items: center;
+  display: flex;
+  gap: 32px;
+  justify-content: space-evenly;
+}
+
+.sessao-cards h2 {
+  border-bottom: 2px solid #000;
+}
+
+.sessao-cards button {
+  background: none;
 }
