--- a/src/componente/Card/index.css
+++ b/src/componente/Card/index.css
@@ -1,1 +1,37 @@
-.card {}
+.colaborador {
+    width: 280px;
+}
+
+.colaborador .cabecalho {
+    border-radius: 10px 10px 0px 0px;
+    margin: 0;
+}
+.colaborador img {
+    width: 100px;
+    border-radius: 20%;
+    position: relative;
+    bottom: -50px;
+}
+
+.colaborador .rodape {
+    background: #FFFFFF;
+    box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.08);
+    border-radius: 0px 0px 10px 10px;
+    padding-top: 40px;
+    padding-bottom: 40px;
+}
+
+.colaborador .rodape h3 {
+    color: #6278F7;
+    font-size: 18px;
+    line-height: 22px;
+    font-weight: bold;
+    margin-bottom: 8px;
+}
+
+.colaborador .rodape p {
+    font-size: 18px;
+    line-height: 22px;
+    color: #212121;
+    padding: 0 16px;
+}
