--- a/src/componente/Time/index.css
+++ b/src/componente/Time/index.css
@@ -9,3 +9,10 @@
   font-size: 32px;
   padding-bottom: 8px;
 }
+
+.time .sessao-card {
+  align-items: center;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+}
